# diplom-graph-rag

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  alpha_ontology.ttl  config.test.yaml  config.yml  docker-compose.yml  main.py  my_ontology.ttl  pyproject.toml  report.html
langfuse/: docker-compose.yaml
pipelines/: graphrag_pipeline.py
src/application/dtos/: extraction_dtos.py
src/application/services/: context_builder.py  entity_resolution_service.py  file_storage_service.py  post_processing_service.py  retrieval_registry.py
src/application/use_cases/: answer_question.py  build_communities.py  delete_document_use_case.py  export_ontology.py  ingest_document.py  seed_tbox.py  update_ontology_use_case.py
src/application/use_cases/ingest_pipeline/: context.py
src/application/use_cases/ingest_pipeline/steps/: embed_chunks_step.py  ensure_tbox_step.py  extract_entities_step.py  parse_and_chunk_step.py  post_process_step.py  save_structure_step.py
src/config/: app_settings.py  base.py  chunking_settings.py  extraction_settings.py  llm_config_loader.py  llm_settings.py  neo4j_settings.py  ollama_settings.py  parsing_settings.py  rag_settings.py  vllm_settings.py
src/di/: container.py
src/di/providers/: application_provider.py  config_provider.py  infrastructure_provider.py  rag_provider.py
src/domain/: models.py  resolution_rules.py
src/domain/aggregates/: document_aggregate.py  instance_agregate.py
src/domain/agregates/: document_agregate.py  instance_agregate.py
src/domain/graph_components/: edges.py  nodes.py
src/domain/interfaces/llm/: llm_client.py
src/domain/interfaces/repositories/: document_repository.py  edge_repository.py  graph_repository.py  instance_repository.py  schema_repository.py
src/domain/interfaces/services/: answer_generator.py  file_storage_service.py  graph_analytics_service.py  graph_embedding_service.py  retrieval_strategy.py  synonym_resolver.py
src/domain/ontology/: base_tbox.py  base_tbox_relations.py  ontology_update_validator.py  schema.py  schema_validator.py  turtle_ontology_exporter.py  turtle_ontology_importer.py
src/domain/services/builders/: edge_builder.py
src/domain/utils/: normalize_predicate.py
src/domain/value_objects/: answer_response.py  graph_community.py  search_context.py  synonym_group.py
src/infrastructure/docling/: doc_processor.py  dtos.py  pdf_pipeline_options_factory.py  text_cleaner.py
src/infrastructure/embeddings/: sentence_transformer_embedding_service.py
src/infrastructure/llm/: llm_factory.py  output_cleaners.py  structured_runner.py
src/infrastructure/llm/clients/: llm_answer_generator.py  llm_entity_extractor.py  llm_synonym_resolver.py  ollama_answer_generator.py  ollama_client.py  ollama_synonym_resolver.py
src/infrastructure/llm/prompts/: answer_generation.py  community_summary.py  entity_extraction.py  synonym_resolution.py
src/infrastructure/neo4j_gds/: gds_analytics_service.py
src/infrastructure/retrieval/: community_strategy.py  hybrid_strategy.py  ppr_strategy.py  vector_search_strategy.py
src/persistence/neo4j/: base_repository.py  neo4j_document_repository.py  neo4j_edge_repository.py  neo4j_instance_repository.py  neo4j_repository.py  neo4j_schema_repository.py  session_manager.py
src/persistence/neo4j/mappers/: node_mappers.py
src/persistence/neo4j/queries/: __init__.py  analytics_queries.py  base.py  document_queries.py  edge_queries.py  instance_queries.py  schema_queries.py
src/presentation/api/: main.py
src/presentation/api/routers/: chat.py  documents.py
src/presentation/api/schemas/: chat.py
src/presentation/cli/: app.py  ask_cmd.py  build_communities_cmd.py  clear_db.py  community_info_cmd.py  delete_doc_cmd.py  doc_info_cmd.py  doc_list_cmd.py  document_cli.py  drop_db_cmd.py  export_ontology_cmd.py  ingest_cmd.py  init_ontology_cmd.py  seed_tbox_cmd.py  update_ontology_cmd.py
src/utils/: logging.py
tests/: conftest.py  pytest.ini
tests/integration/: conftest.py  test_ask_use_case.py  test_delete_document_use_case.py  test_document_repository.py  test_edge_repository.py  test_export_ontology_use_case.py  test_ingest_use_case.py  test_instance_repository.py  test_llm_entity_extractor.py  test_schema_repository.py  test_seed_tbox_use_case.py  test_update_ontology_use_case.py
tests/unit/: conftest.py  test_context_builder.py  test_document_aggregate.py  test_edge_builder.py  test_entity_filter.py  test_entity_registry.py  test_entity_resolution.py  test_export_ontology_use_case.py  test_file_storage_service.py  test_instance_aggregate.py  test_normalize_predicate.py  test_ontology_update_validator.py  test_retrieval_registry.py  test_schema_validator.py  test_turtle_ontology_importer.py
