[project]
name = "gr_a3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dishka>=1.9.1",
    "docling>=2.80.0",
    "easyocr>=1.7.2",
    "fastapi[standard]>=0.135.2",
    "langchain-core>=1.2.19",
    "langchain-ollama>=1.0.1",
    "neo4j>=6.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-levenshtein>=0.27.3",
    "python-multipart>=0.0.22",
    "rdflib>=7.6.0",
    "rich>=14.3.3",
    "sentence-transformers>=5.3.0",
    "tenacity>=9.1.4",
    "transformers>=4.57.6",
    "typer>=0.21.2",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "git-filter-repo>=2.47.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.6",
    "testcontainers[neo4j]>=4.14.2",
    "ty>=0.0.23",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (require Neo4j)",
]
pythonpath = ["."]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["E402"]
"src/presentation/cli/*.py" = ["E402"]
"tests/integration/conftest.py" = ["E402"]

